# python-codility-template

./: README.md  pyproject.toml  test_main.py
