[tool.poetry]
name = "python-codility-template"
version = "0.1.0"
description = ""
authors = ["Justin Dennison <justin1dennison@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
hypothesis = "^5.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
